another minor change to fix weird horizontal scrolling on open/close of subnav

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -7,7 +7,7 @@
 // Main app area
 
 .main {
-  position: relative;
+  // position: relative;
   max-width: 1300px;
   min-width: 320px;
   height: inherit;
